ajoute dans la pipeline un check pour prettier et eslint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,5 +19,11 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Run Prettier
+        run: npx prettier --check .
+
+      - name: Run ESLint
+        run: npx eslint .
+
       - name: Message de fin
         run: echo "🎉 Tout est Ok !"
