--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,14 +16,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build project
-        run: npm run build
+      - name: Run TypeScript
+        run: npx tsc --noEmit
 
       - name: Run Prettier
         run: npx prettier --check .
 
       - name: Run ESLint
         run: npx eslint .
+
+      - name: Build project
+        run: npm run build
 
       - name: Message de fin
         run: echo "🎉 Tout est Ok !"
