renomme le nom de la pipeline et ajoute un readme

--- a/.github/workflows/ci-pokedex.yml
+++ b/.github/workflows/ci-pokedex.yml
@@ -1,32 +1,43 @@
-name: Pokedex CI
+name: CI Pokedex
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  test:
+  CI-Pokedex:
     runs-on: ubuntu-latest
 
     steps:
+      # Check le repo Github
       - name: Github checkout
         uses: actions/checkout@v4
 
+      # Setup Node.js avec la version 20 et utilise le cache de npm
       - name: Setup Node.js
         uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
+      # Installe les dépendances
       - name: Install dependencies
         run: npm ci
 
+      # Check les fichiers pour respecter TypeScript
       - name: Run TypeScript
         run: npx tsc --noEmit
 
+      # Check les fichiers pour respecter Prettier
       - name: Run Prettier
         run: npx prettier --check .
 
+      # Check les fichiers pour respecter ESLint
       - name: Run ESLint
         run: npx eslint .
 
+      # Build le projet
       - name: Build project
         run: npm run build
 
+      # Print un message quand tout est Ok
       - name: Message de fin
         run: echo "🎉 Tout est Ok !"
