--- a/.github/workflows/ci-pokedex.yml
+++ b/.github/workflows/ci-pokedex.yml
@@ -36,7 +36,7 @@ jobs:
 
         # Lancer le serveur local
       - name: Start server
-        run: npm run start &
+        run: npm start &
         env:
           NODE_ENV: test
 
@@ -44,13 +44,22 @@ jobs:
       - name: Wait for server to be ready
         run: npx wait-on http://localhost:5173
 
-      # Lancer les tests Cypress e2e
+      # Lancer les tests Cypress e2e avec la capture vidéo activée
       - name: Run Cypress tests
         uses: cypress-io/github-action@v5
         with:
           start: npm start
           wait-on: http://localhost:5173
           config-file: cypress.config.js
+          record: false # Désactive l'enregistrement sur le dashboard Cypress
+          video: true # Active le mode vidéo
+
+      # Enregistrer les vidéos comme artefacts
+      - name: Upload Cypress videos
+        uses: actions/upload-artifact@v3
+        with:
+          name: cypress-videos
+          path: cypress/videos
 
       # Build le projet
       - name: Build project
