--- a/.github/workflows/ci-pokedex.yml
+++ b/.github/workflows/ci-pokedex.yml
@@ -1,9 +1,9 @@
-name: CI-CD Pokedex
+name: CI Pokedex
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
-  CI-CD-Pokedex:
+  CI-Pokedex:
     runs-on: ubuntu-latest
 
     steps:
@@ -59,16 +59,6 @@ jobs:
         with:
           name: cypress-videos
           path: cypress/videos
-
-      - uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Adding Known Host
-        run: ssh-keyscan -H 51.75.23.76 >> ~/.ssh/known_hosts
-      - name: Check SSH agent keys
-        run: ssh-add -l
-      - name: Ls on server
-        run: ssh debian@51.75.23.76 'ls -la /var/www'
 
       # Build le projet
       - name: Build project
