--- a/.github/workflows/cd-pokdex.yml
+++ b/.github/workflows/cd-pokdex.yml
@@ -32,5 +32,8 @@ jobs:
         run: ssh-add -l
 
       # Envoi des fichiers avec scp
-      - name: Deploy files to server
-        run: scp -r dist/* debian@51.75.23.76:/var/www/pokedex
+      - name: Deploy files to temporary folder
+        run: scp -r dist/* debian@51.75.23.76:/home/debian/pokedex_temp
+
+      - name: Move files to /var/www/pokedex
+        run: ssh debian@51.75.23.76 "sudo mv /home/debian/pokedex_temp/* /var/www/pokedex && sudo chown -R www-data:www-data /var/www/pokedex"
